Deal with responsive font sizes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*main.scss*/
 /**** MAIN MANIFEST
 *=======================================================================*/
@@ -526,8 +527,6 @@ td, th {
 html, body {
   color: #797E83;
   font-size: 16px;
-  font-family: Garamond, Baskerville, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
-  line-height: 1.5;
   overflow-x: hidden; }
 
 /*===== Text style =====*/
@@ -702,7 +701,7 @@ footer {
 *=======================================================================*/
 /*===== Scrollbar features =====*/
 ::-webkit-scrollbar {
-  width: 0.15625rem;
+  width: 0.09375rem;
   background: rgba(11, 11, 11, 0.1); }
 
 ::-webkit-scrollbar-thumb {
@@ -778,6 +777,7 @@ footer {
 *=======================================================================*/
 .case {
   /*===== Banner image =====*/
+  height: 100vh;
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
   background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
@@ -877,12 +877,16 @@ footer {
   opacity: initial; }
 
 /*===== Headline features =====*/
-h1, .headline-primary, .headline-primary--grouped {
+h1, .headline-primary, .headline-primary--grouped, .headline-primary--minor {
   color: #FFFFFF;
   font-family: Garamond, Baskerville, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
   font-weight: 600;
-  line-height: 1.09524;
-  margin-top: 0;
+    line-height: 5rem;
+    margin-top: 18.75rem;
+  margin-bottom: 2.5rem;
+    width: 100%; }
+
+.headline-primary, .headline-primary--grouped {
   /*===== If the key exists in the map =====*/
   /*===== If the key exists in the map =====*/
   /*===== If the key exists in the map =====*/
@@ -891,28 +895,55 @@ h1, .headline-primary, .headline-primary--grouped {
   /*===== If the key exists in the map =====*/
   /*===== Prints a media query based on the value =====*/ }
   @media (min-width: 1280px) {
-    h1, .headline-primary, .headline-primary--grouped {
+    .headline-primary, .headline-primary--grouped {
       font-size: 5rem; } }
   @media (min-width: 981px) and (max-width: 1280px) {
-    h1, .headline-primary, .headline-primary--grouped {
-      font-size: 4.875rem; } }
-  @media (min-width: 737px) and (max-width: 980px) {
-    h1, .headline-primary, .headline-primary--grouped {
-      font-size: 4.75rem; } }
-  @media (min-width: 481px) and (max-width: 736px) {
-    h1, .headline-primary, .headline-primary--grouped {
-      font-size: 4.625rem; } }
-  @media (min-width: 282px) and (max-width: 480px) {
-    h1, .headline-primary, .headline-primary--grouped {
+    .headline-primary, .headline-primary--grouped {
       font-size: 4.5rem; } }
+  @media (min-width: 737px) and (max-width: 980px) {
+    .headline-primary, .headline-primary--grouped {
+      font-size: 4rem; } }
+  @media (min-width: 481px) and (max-width: 736px) {
+    .headline-primary, .headline-primary--grouped {
+      font-size: 3.5rem; } }
+  @media (min-width: 282px) and (max-width: 480px) {
+    .headline-primary, .headline-primary--grouped {
+      font-size: 3rem; } }
   @media (1px) and (max-width: 281px) {
-    h1, .headline-primary, .headline-primary--grouped {
+    .headline-primary, .headline-primary--grouped {
       font-size: 2.5rem; } }
+
+.headline-primary--minor {
+  /*===== If the key exists in the map =====*/
+  /*===== If the key exists in the map =====*/
+  /*===== If the key exists in the map =====*/
+  /*===== If the key exists in the map =====*/
+  /*===== If the key exists in the map =====*/
+  /*===== If the key exists in the map =====*/
+  /*===== Prints a media query based on the value =====*/ }
+  @media (min-width: 1280px) {
+    .headline-primary--minor {
+      font-size: 2.0625rem; } }
+  @media (min-width: 981px) and (max-width: 1280px) {
+    .headline-primary--minor {
+      font-size: 1.98438rem; } }
+  @media (min-width: 737px) and (max-width: 980px) {
+    .headline-primary--minor {
+      font-size: 1.90625rem; } }
+  @media (min-width: 481px) and (max-width: 736px) {
+    .headline-primary--minor {
+      font-size: 1.82813rem; } }
+  @media (min-width: 282px) and (max-width: 480px) {
+    .headline-primary--minor {
+      font-size: 1.75rem; } }
+  @media (1px) and (max-width: 281px) {
+    .headline-primary--minor {
+      font-size: 0.9375rem; } }
 
 h2, .headline-secondary, .headline-secondary--grouped {
   color: #FFFFFF;
   letter-spacing: 1px;
-  font-family: "aleo-light", "prata-regular", Garamond, Baskerville, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
+  font-family: "aleo-regular", "prata-regular", Garamond, Baskerville, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
   font-weight: 700;
   /*===== If the key exists in the map =====*/
   /*===== If the key exists in the map =====*/
@@ -926,25 +957,25 @@ h2, .headline-secondary, .headline-secondary--grouped {
       font-size: 1.9375rem; } }
   @media (min-width: 981px) and (max-width: 1280px) {
     h2, .headline-secondary, .headline-secondary--grouped {
-      font-size: 1.875rem; } }
+      font-size: 1.86563rem; } }
   @media (min-width: 737px) and (max-width: 980px) {
     h2, .headline-secondary, .headline-secondary--grouped {
-      font-size: 1.8125rem; } }
+      font-size: 1.79375rem; } }
   @media (min-width: 481px) and (max-width: 736px) {
     h2, .headline-secondary, .headline-secondary--grouped {
-      font-size: 1.75rem; } }
+      font-size: 1.72188rem; } }
   @media (min-width: 282px) and (max-width: 480px) {
     h2, .headline-secondary, .headline-secondary--grouped {
-      font-size: 1.6875rem; } }
+      font-size: 1.65rem; } }
   @media (1px) and (max-width: 281px) {
     h2, .headline-secondary, .headline-secondary--grouped {
-      font-size: 1.3125rem; } }
+      font-size: 1rem; } }
 
 h3, .headline-tertiary, .headline-tertiary--grouped {
   color: #FFFFFF;
   letter-spacing: 1px;
-  font-family: "Hoefler Text", Baskerville, Garamond, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
-  font-weight: 500;
+  font-family: "aleo-light", Baskerville, Garamond, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
+  font-weight: 400;
   /*===== If the key exists in the map =====*/
   /*===== If the key exists in the map =====*/
   /*===== If the key exists in the map =====*/
@@ -954,19 +985,19 @@ h3, .headline-tertiary, .headline-tertiary--grouped {
   /*===== Prints a media query based on the value =====*/ }
   @media (min-width: 1280px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
-      font-size: 1.5rem; } }
+      font-size: 1.5625rem; } }
   @media (min-width: 981px) and (max-width: 1280px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
-      font-size: 1.4375rem; } }
+      font-size: 1.52344rem; } }
   @media (min-width: 737px) and (max-width: 980px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
-      font-size: 1.375rem; } }
+      font-size: 1.48438rem; } }
   @media (min-width: 481px) and (max-width: 736px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
-      font-size: 1.3125rem; } }
+      font-size: 1.44531rem; } }
   @media (min-width: 282px) and (max-width: 480px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
-      font-size: 1.1875rem; } }
+      font-size: 1.40625rem; } }
   @media (1px) and (max-width: 281px) {
     h3, .headline-tertiary, .headline-tertiary--grouped {
       font-size: 0.8125rem; } }
@@ -986,8 +1017,7 @@ h3, .headline-tertiary, .headline-tertiary--grouped {
 /*===== Image features =====*/
 .img--avatar, .img--project-preview {
   display: block;
-  margin-right: auto;
-  margin-left: auto; }
+  margin: 0 auto; }
 
 /*===== Navigation item features =====*/
 @media (min-width: 769px) {
@@ -1021,7 +1051,7 @@ h3, .headline-tertiary, .headline-tertiary--grouped {
   color: #FFFFFF;
   text-align: center;
   text-shadow: 0 0.0625rem rgba(11, 11, 11, 0.2);
-  font-size: 1.125rem; }
+  font-size: 1.0625rem; }
 
 /*===== Paragraph features =====*/
 p, .para-primary, .para-primary--grouped {
@@ -1099,8 +1129,6 @@ p, .para-primary, .para-primary--grouped {
 *=======================================================================*/
 .headline-primary {
   margin-bottom: 1.66667rem; }
-  .headline-primary--grouped {
-    margin-bottom: 0; }
 .headline-secondary {
   margin-bottom: 0.91667rem; }
   .headline-secondary--grouped {
@@ -1164,12 +1192,15 @@ p, .para-primary, .para-primary--grouped {
 .img--project-preview {
   background-color: rgba(0, 0, 0, 0.05);
   border-radius: 0.4em;
-  width: 20rem;
   margin-top: 1.25rem;
   transition: opacity 0.5s; }
+  @media (min-width: 1100px) {
+    .img--project-preview {
+      width: 20rem; } }
   @media (min-width: 769px) {
     .img--project-preview {
-      margin-bottom: 4.375rem; } }
+      margin-bottom: 4.375rem;
+      width: 100%; } }
 
 /*===== Import layers =====*/
 /*_layers.scss*/
