--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -13,8 +13,8 @@
 html, body {
   color: palette(grey);
   font-size: $base__font-size;
-  font-family: $font-family--primary;
-  line-height: ($base__line / $base__font-size);
+  // font-family: $font-family--primary;
+  // line-height: ($base__line / $base__font-size);
   overflow-x: hidden;
 }
 
