--- a/public/scss/modules/_headlines.scss
+++ b/public/scss/modules/_headlines.scss
@@ -6,11 +6,17 @@
 
   &-primary {
     @extend %hdln-prim;
+    @extend %hdln-prim-mjr;
     margin-bottom: rem(70px, 42px);
 
     @include m(grouped) {
       @extend %hdln-prim;
-      margin-bottom: 0;
+      @extend %hdln-prim-mjr;
+    }
+
+    @include m(minor) {
+      @extend %hdln-prim;
+      @extend %hdln-prim-mnr;
     }
 
   }
