Make the strong tags inside of the paragraph tags cause words to gain 600 in font weight

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1297,6 +1297,8 @@ p, .para-primary, .para-primary--grouped {
 *=======================================================================*/
 .para-primary {
   margin: 0 0 1.66667rem; }
+  .para-primary strong {
+    font-family: "source_sans_pro-semibold", "open_sans-semibold", Arial, sans-serif, serif; }
 
 /*===== Import projects =====*/
 /*_projects.scss*/
