Make the strong tags lose 200 font weights

--- a/public/scss/utilities/_config.scss
+++ b/public/scss/utilities/_config.scss
@@ -7,7 +7,7 @@
 
 /*===== Font stacks =====*/
 $font-family--default     : "source_sans_pro-light", "open_sans-light", Arial, sans-serif, serif;
-$font-family--default-em  : "source_sans_pro-semibold", "open_sans-semibold", Arial, sans-serif, serif;
+$font-family--default-em  : "source_sans_pro-regular", "open_sans-regular", Arial, sans-serif, serif;
 $font-family--primary     : Garamond, Baskerville, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
 $font-family--secondary   : "aleo-regular", "prata-regular", Garamond, Baskerville, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
 $font-family--tertiary    : "aleo-light", Baskerville, Garamond, "prata-regular", "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
