--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1298,7 +1298,7 @@ p, .para-primary, .para-primary--grouped {
 .para-primary {
   margin: 0 0 1.66667rem; }
   .para-primary strong {
-    font-family: "source_sans_pro-semibold", "open_sans-semibold", Arial, sans-serif, serif; }
+    font-family: "source_sans_pro-regular", "open_sans-regular", Arial, sans-serif, serif; }
 
 /*===== Import projects =====*/
 /*_projects.scss*/
