Fix Elevator.js error, which I totally caused

--- a/public/scss/base/_index.scss
+++ b/public/scss/base/_index.scss
@@ -2,5 +2,8 @@
 
 /**** BASE MANIFEST
 *=======================================================================*/
+/*===== Import normalize reset =====*/
+@import "normalize";
+
 /*===== Import base =====*/
 @import "base";
