--- a/public/scss/modules/_slideshow.scss
+++ b/public/scss/modules/_slideshow.scss
@@ -75,7 +75,7 @@
     position: relative;
     height: rem(500px);
     line-height: 0;
-    background-color: $meteorite;
+    background-color: transparent;
     border-radius: $br--default;
     margin: 0 auto;
     padding: 0;
