--- a/public/scss/modules/_layers.scss
+++ b/public/scss/modules/_layers.scss
@@ -7,7 +7,6 @@
 }
 
 .layer-gradient--to-b {
-  // @include linear-gradient(to bottom, #003053 0%, #00446B 25%, #005685 50%, #00679E 75%, #007BB8 100%);
-  // @include linear-gradient(to bottom, #003053 0%, #005685 100%);
-  @include linear-gradient(to bottom, #001929 0%, #002E4D 48%, #004570 68%, #005B94 100%);
+  @include linear-gradient(to bottom, $sorta_midnight 0%, $sorta_prussian-blue 48%, $sorta_regal-blue 68%, $sorta_bahama-blue 100%);
+  // @include linear-gradient(to bottom, $midnight 0%, $sorta_green-vogue 48%, $sorta_catalina-blue 68%, $sorta_congress-blue 100%);
 }
