--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,7 +115,8 @@
 /*===== Color palette modifiers map =====*/
 /*===== Text =====*/
 /*===== Border radius =====*/
-/*===== Transition Duration =====*/
+/*===== Transition duration =====*/
+/*===== Cubic-Benzier duration =====*/
 /*===== Path to assets =====*/
 /*===== Grid variables =====*/
 /*===== Media query breakpoints =====*/
@@ -175,7 +176,8 @@
 /*===== BEM element selector mixin =====*/
 /*===== BEM modifier selector mixin =====*/
 /*===== Media queries =====*/
-/*===== Generate modifier color classes =====*/
+/*===== Generate background modifier color classes =====*/
+/*===== Generate background modifier color classes =====*/
 /*===== Generate modifier color-gradient classes =====*/
 /*===== Generate :before or :after pseudo-element shapes =====*/
 /*===== Background image replacement =====*/
@@ -723,15 +725,17 @@ footer {
 /**** BUTTONS
 *=======================================================================*/
 .btn--default {
-  background-color: #222F40; }
+  border: 0.125rem solid #222F40; }
 .btn--success {
-  background-color: #29AB87; }
+  border: 0.125rem solid #29AB87; }
 .btn--error {
-  background-color: #E16865; }
+  border: 0.125rem solid #E16865; }
 .btn--warning {
-  background-color: #C7031E; }
+  border: 0.125rem solid #BA0101; }
 .btn--info {
-  background-color: #009DC4; }
+  border: 0.125rem solid #009DC4; }
+.btn--clear {
+  border: 0.125rem solid transparent; }
 
 [class^="btn--"] {
   padding: 0.9375rem 1.875rem;
@@ -825,15 +829,18 @@ footer {
 
 /*===== Button features =====*/
 [class^="btn--"], .form__btn {
-  padding: 0.75rem 1.5rem;
-  border: 0;
-  border-radius: 0.4em;
+  background-color: transparent;
+  border-radius: 0.2em;
   color: #FFFFFF;
   text-transform: uppercase;
   font-size: 1rem;
   font-family: "source_sans_pro-light", "open_sans-light", Arial, sans-serif, serif;
   font-weight: 500;
-  transition: opacity 0.5s; }
+  padding: 0.75rem 1.5rem;
+  -webkit-transition: background-color 0.3s linear;
+  -moz-transition: background-color 0.3s linear;
+  -o-transition: background-color 0.3s linear;
+  transition: background-color 0.3s linear; }
 
 /*===== Case features =====*/
 .case {
@@ -845,10 +852,14 @@ footer {
   width: 100%; }
 
 /*===== Dimmer action features =====*/
-[class^="btn--"]:hover, .elevator:hover, .img--project-preview:hover {
+.elevator:hover, .img--project-preview:hover {
   opacity: .67; }
-[class^="btn--"]:active, .elevator:active, .img--project-preview:active {
+.elevator:active, .img--project-preview:active {
   opacity: initial; }
+
+/*===== Filler action features =====*/
+[class^="btn--"]:hover {
+  background-color: #BA0101; }
 
 /*===== Headline features =====*/
 h1, .headline-primary, .headline-primary--grouped, .headline-primary--minor {
@@ -1088,7 +1099,7 @@ p, .para-primary, .para-primary--grouped {
   font-size: 1.125rem;
   margin-bottom: 1.11111rem;
   border-bottom: 6px solid #c0c3c5;
-  border-radius: 0.4em;
+  border-radius: 0.2em;
   background: #d8dadb;
   color: black;
   font-weight: 300; }
@@ -1163,7 +1174,7 @@ p, .para-primary, .para-primary--grouped {
   border-radius: 100%; }
 .img--project-preview {
   background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 0.4em;
+  border-radius: 0.2em;
   margin-top: 1.25rem;
   transition: opacity 0.5s; }
   @media (min-width: 1100px) {
@@ -1185,9 +1196,11 @@ p, .para-primary, .para-primary--grouped {
 .layer--error {
   background-color: #E16865; }
 .layer--warning {
-  background-color: #C7031E; }
+  background-color: #BA0101; }
 .layer--info {
   background-color: #009DC4; }
+.layer--clear {
+  background-color: transparent; }
 
 .layer-gradient--to-b {
   background: #001929;
@@ -1298,7 +1311,7 @@ p, .para-primary, .para-primary--grouped {
     height: 31.25rem;
     line-height: 0;
     background-color: transparent;
-    border-radius: 0.4em;
+    border-radius: 0.2em;
     margin: 0 auto;
     padding: 0;
     overflow: hidden;
