--- a/public/scss/modules/_extends.scss
+++ b/public/scss/modules/_extends.scss
@@ -24,15 +24,18 @@
 
 /*===== Button features =====*/
 %btn {
-  padding: rem(12px) rem(24px);
-  border: 0;
+  background-color: transparent;
   border-radius: $br--default;
   color: palette(white, base);
   text-transform: uppercase;
   font-size : rem(16px);
   font-family: $font-family--default;
   font-weight: $font-weight--medium;
-  transition: opacity $trnstn-quick;
+  padding: rem(12px) rem(24px);
+  -webkit-transition: background-color $trnstn-x-quick linear;
+  -moz-transition: background-color $trnstn-x-quick linear;
+  -o-transition: background-color $trnstn-x-quick linear;
+  transition: background-color $trnstn-x-quick linear;
 }
 
 /*===== Case features =====*/
@@ -54,6 +57,16 @@
 
   &:active {
     opacity: initial;
+  }
+
+}
+
+/*===== Filler action features =====*/
+%fil-actn {
+
+  &:hover {
+    background-color: $guardsman-red;
+    // @include bg-colors($ui-colors)
   }
 
 }
